--- a/src/blocks/block-posts-grid/styles/editor.scss
+++ b/src/blocks/block-posts-grid/styles/editor.scss
@@ -279,7 +279,7 @@ body .edit-post-layout .editor-styles-wrapper .c9-posts-grid .container-narrow:n
 	body:not(.folded) .edit-post-layout.is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/posts-grid"] .c9-grid>.block-editor-inner-blocks>.block-editor-block-list__layout,
 	body.folded .edit-post-layout.is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/posts-grid"] .c9-grid>.block-editor-inner-blocks>.block-editor-block-list__layout {
 		min-width: 100%;
-		display: block;
+		display: flex;
 	}
 
 	body:not(.folded) .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .wp-block[data-type="c9-blocks/posts-grid"] .container,
